WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274442
Most of WPT webrtc/RTCSctpTransport-maxMessageSize.html tests are failing
https://bugs.webkit.org/show_bug.cgi?id=274442
Summary
Most of WPT webrtc/RTCSctpTransport-maxMessageSize.html tests are failing
youenn fablet
Reported
2024-05-20 22:34:33 PDT
Most of WPT webrtc/RTCSctpTransport-maxMessageSize.html tests are failing
Attachments
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2024-05-20 22:35:30 PDT
We might need to update the sctp transport state change everytime we update descriptions to have a correct max message size, instead of just reacting to libwebrtc state change callback
Radar WebKit Bug Importer
Comment 2
2024-05-20 22:35:43 PDT
<
rdar://problem/128444396
>
youenn fablet
Comment 3
2024-05-21 00:58:50 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28837
EWS
Comment 4
2024-05-22 00:06:40 PDT
Committed
279111@main
(a270d67c5341): <
https://commits.webkit.org/279111@main
> Reviewed commits have been landed. Closing PR #28837 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug