Cherry-pick 279111@main (a270d67c5341). https://bugs.webkit.org/show_bug.cgi?id=274442

Most of WPT webrtc/RTCSctpTransport-maxMessageSize.html tests are failing
    https://bugs.webkit.org/show_bug.cgi?id=274442
    rdar://128444396

    Reviewed by Philippe Normand.

    We implement https://w3c.github.io/webrtc-pc/#sctp-transport-update-mms.
    This is called when successfully applying a SDP description as per specification.
    In this implementation, the assumption is that canSendSize is 0.
    The specific value of 65536 is handled by libwebrtc.

    * LayoutTests/imported/w3c/web-platform-tests/webrtc/RTCSctpTransport-maxMessageSize-expected.txt:
    * Source/WebCore/Modules/mediastream/PeerConnectionBackend.cpp:
    (WebCore::PeerConnectionBackend::setLocalDescriptionSucceeded):
    (WebCore::PeerConnectionBackend::setRemoteDescriptionSucceeded):
    * Source/WebCore/Modules/mediastream/PeerConnectionBackend.h:
    * Source/WebCore/Modules/mediastream/RTCPeerConnection.cpp:
    (WebCore::RTCPeerConnection::updateSctpBackend):
    * Source/WebCore/Modules/mediastream/RTCPeerConnection.h:
    * Source/WebCore/Modules/mediastream/RTCSctpTransport.cpp:
    (WebCore::RTCSctpTransport::onStateChanged):
    (WebCore::RTCSctpTransport::updateMaxMessageSize):
    * Source/WebCore/Modules/mediastream/RTCSctpTransport.h:
    * Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp:
    (WebCore::GStreamerMediaEndpoint::doSetLocalDescription):
    (WebCore::GStreamerMediaEndpoint::doSetRemoteDescription):
    * Source/WebCore/Modules/mediastream/libwebrtc/LibWebRTCMediaEndpoint.cpp:
    (WebCore::SctpTransportState::maxMessageSize const):
    (WebCore::LibWebRTCMediaEndpoint::setLocalSessionDescriptionSucceeded):
    (WebCore::LibWebRTCMediaEndpoint::setRemoteSessionDescriptionSucceeded):

    Canonical link: https://commits.webkit.org/279111@main

Canonical link: https://commits.webkit.org/274313.310@webkitglib/2.44